--- a/courses/static/css/style.css
+++ b/courses/static/css/style.css
@@ -2843,6 +2843,7 @@ input:focus, textarea:focus {
 .sidebar-wrapper a {
   text-decoration: none;
 }
+
 .sidebar-wrapper .sidebar-content a:hover {
   background: #5b5b5b;
 }
@@ -2880,8 +2881,6 @@ input:focus, textarea:focus {
   color: #bdbdbd;
   font-size: 14px;
 }
-
-
 
 .sidebar-wrapper .sidebar-menu .sidebar-dropdown>a:after {
   width: 0;
@@ -2931,7 +2930,8 @@ input:focus, textarea:focus {
 
 .sidebar-wrapper .sidebar-menu .sidebar-submenu a {
   font-size: 13px;
-padding: 7px 10px 7px 2px;
+  padding: 7px 10px 7px 2px;
+  border-bottom: 2px solid #323232;
 }
 
 .sidebar-wrapper .sidebar-menu ul li a i {
@@ -2952,6 +2952,10 @@ padding: 7px 10px 7px 2px;
   background: #3d3d3d;
 }
 
+.sidebar-wrapper .sidebar-menu ul li a.complete {
+  border-bottom: 2px solid #1e8d02;
+}
+
 .sidebar-wrapper .sidebar-menu ul li a i.video:before {
   content: "\f03d";
 }
@@ -2963,10 +2967,10 @@ padding: 7px 10px 7px 2px;
 .sidebar-wrapper .sidebar-menu ul li a i.image:before {
   content: "\f03e";
 }
+
 .sidebar-wrapper .sidebar-menu ul li a i.file:before {
   content: "\f016";
 }
-
 
 .page-content {
   display: inline-block;
