--- a/students/templates/students/student/take_quiz_form.html
+++ b/students/templates/students/student/take_quiz_form.html
@@ -26,6 +26,10 @@
                     <div class="row">
                         <div class="col-md-6">
                             <button class="btn btn-primary" type="submit" id="btnAns">{% trans 'Next' %}</button>
+
+                            {% if request.GET.ref is not None %}
+                            <a class="btn btn-secondary" href="{{request.GET.ref}}">Return Back</a>
+                            {% endif %}
                         </div>
 
                         <div class="col-md-6 text-lg-right">
