--- a/courses/templates/base.html
+++ b/courses/templates/base.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>{% block title %}Educa{% endblock %}</title>
+    <title>{% block title %}NYC Construction Safety Tranining Llc{% endblock %}</title>
     <link href="{% static "/css/base.css" %}" rel="stylesheet">
     <link href="{% static "/css/style.css" %}" rel="stylesheet">
 
@@ -22,7 +22,7 @@
         <div class="top-header-area d-flex justify-content-between align-items-center">
             <!-- Contact Info -->
             <div class="contact-info">
-                <a href="#"><span>Phone:</span> +45 300 303 02566</a>
+                <a href="#"><span>Phone:</span> 914-473-6791</a>
                 <a href="#"><span>Email:</span> info@educa.com</a>
             </div>
             <!-- Follow Us -->
