--- a/courses/templates/base.html
+++ b/courses/templates/base.html
@@ -68,6 +68,7 @@
 
                                 {% if request.user.is_authenticated and request.user.is_teacher == True %}
                                 <li><a href="{% url "manage_course_list" %}"">My Courses</a></li>
+                                <li><a href="{% url "messages" %}"">Messages</a></li>
                                 {% endif %}
 
                                 <!-- <li><a href=" #">Pages</a>
